Revert "small fixes - word wrap, live badge"
This reverts commit 0e431d4038d774079c78f0de32238aac7260e4ca.

--- a/ui/scss/component/_livestream.scss
+++ b/ui/scss/component/_livestream.scss
@@ -318,7 +318,7 @@ $discussion-header__height: 3rem;
   padding-bottom: var(--spacing-xxs);
   .markdown-preview {
     p {
-      word-break: break-word;
+      word-break: break-all;
     }
   }
 }
